Added cart page. Added login to remove, add cart items.

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,12 @@
 .header-component {
 	.header-holder {
 		justify-content: space-between;
+		.actions {
+			display: flex;
+			.spacer {
+				width: 40px;
+			}
+			margin-right: 20px;
+		}
 	}
 }
