Added the finished code.

--- a/src/components/cart-item/cart-item.scss
+++ b/src/components/cart-item/cart-item.scss
@@ -24,6 +24,12 @@
 				padding: 0 8px;
 				font-size: 12px;
 			}
+			.read-only-qty {
+				text-align: left;
+				padding: 0 8px;
+				font-size: 14px;
+				margin-top: 8px;
+			}
 
 			.actions {
 				display: flex;
