Refactored the code. CODE FREEZE.

--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -34,7 +34,11 @@
 			margin-top: 1em;
 
 			.q-holder {
-				width: 30%;
+				width: 40%;
+			}
+
+			.add-to-cart {
+				width: 100%;
 			}
 		}
 	}
